--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Presentation-2ea25cbb-d9b5-408f-a8d5-4f241e5a6bb7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-0B5TBE6\\SQLEXPRESS;Database=airlineAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
