Aadded the passport fieldin the register form, auto-fill passport when login user books flight and logged in user can view all their tickets

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-0B5TBE6\\SQLEXPRESS;Database=airlineAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-0B5TBE6\\SQLEXPRESS;Database=airlineAppDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AirlineDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Presentation;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
