--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-0B5TBE6\\SQLEXPRESS;Database=airlineAppDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AirlineDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Presentation;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-0B5TBE6\\SQLEXPRESS;Database=airlineAppDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"AirlineDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Presentation;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    "DefaultConnection": "Server=sql5080.site4now.net;Database=db_aa3930_airlinedb;User Id=db_aa3930_airlinedb_admin;Password=!badcraft13;MultipleActiveResultSets=true;"
+
   },
   "Logging": {
     "LogLevel": {
